--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "expo": "~49.0.7",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
@@ -22,7 +23,7 @@
     "react-native-emoji-selector": "^0.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-image-picker": "~14.3.2"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
